contrast last fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,6 +53,21 @@ nav ul {
 nav ul li {
   cursor: pointer;
 }
+nav ul li a {
+  color: var(--background-color);
+  text-decoration: none;
+  display: block;
+  padding: 0.5rem;
+}
+nav ul li a:hover {
+  color: var(--accent-color);
+}
+nav ul li a:visited {
+  color: pink;
+}
+nav ul li a:active {
+  color: var(--accent-color);
+}
 .hero-section h1 {
   font-size: 1.5rem;
   margin-bottom: 2rem;
@@ -129,9 +144,7 @@ nav ul li {
   margin-top: 0;
 }
 
-/* =====================
-   ERROR PAGE STYLES 
-   ===================== */
+/* ERROR PAGE STYLES  */
 .error-page {
   text-align: center;
   padding: 20px;
